updated notebooks and set up files

--- a/NB03-2016-HIV-MTCT-Elimination-Process-Data.ipynb
+++ b/NB03-2016-HIV-MTCT-Elimination-Process-Data.ipynb
@@ -490,6 +490,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.3.0'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import googletrans\n",
+    "\n",
+    "googletrans.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
@@ -1474,6 +1496,28 @@
     "**IMPORTANT:** \n",
     "1. If you get an error `StreamResetError: Stream forcefully closed`, adjust the `api_sleep_interval`and run the double loop cell again.\n",
     "2. If you get a JSON decode error, it is likely that the API stopped working (Google possibly blocked your access to the API). You can try adjusting the `api_sleep_interval` and run the loop again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.17.0'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import fuzzywuzzy\n",
+    "\n",
+    "fuzzywuzzy.__version__"
    ]
   },
   {
