--- a/NB03-2016-HIV-MTCT-Elimination-Process-Data.ipynb
+++ b/NB03-2016-HIV-MTCT-Elimination-Process-Data.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -557,9 +557,8 @@
     }
    ],
    "source": [
-    "test = translator.translate(\"สมุทรสาคร\", dest='en').text\n",
-    "\n",
-    "test"
+    "test = await translator.translate(\"สมุทรสาคร\", dest='en')\n",
+    "test.text"
    ]
   },
   {
@@ -1238,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1253,14 +1252,14 @@
     }
    ],
    "source": [
-    "test = translator.translate(th_geo_df2.loc[2]['Province_TH'], dest='en').text\n",
+    "test = await translator.translate(th_geo_df2.loc[2]['Province_TH'], dest='en')\n",
     "\n",
-    "test"
+    "test.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1275,9 +1274,8 @@
     }
    ],
    "source": [
-    "test = translator.translate(\"จังหวัดเชียงใหม่\", dest='en').text\n",
-    "\n",
-    "test"
+    "test = await translator.translate(\"จังหวัดเชียงใหม่\", dest='en')\n",
+    "test.text"
    ]
   },
   {
@@ -1322,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T01:14:59.545355Z",
@@ -1345,8 +1343,9 @@
     "        \"maxval\": [],\n",
     "        \"bestmatch\": []\n",
     "    }\n",
-    "fuzzy_df1 = pd.DataFrame(row_data)\n",
-    "fuzzy_df1['bestmatch'] = fuzzy_df1['bestmatch'].astype('str')"
+    "#fuzzy_df1 = pd.DataFrame(row_data)\n",
+    "fuzzy_df1 = pd.DataFrame(columns=[\"fuzzy_score\", \"sm_prov_en_fpr\", \"mean\", \"maxval\"])\n",
+    "#fuzzy_df1 = pd.concat([fuzzy_df1, pd.DataFrame(row_data)], ignore_index=True)\n"
    ]
   },
   {
@@ -1522,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T01:15:39.491859Z",
@@ -8962,8 +8961,9 @@
     "    time.sleep(api_sleep_interval) \n",
     "\n",
     "    # translate prov_th_1 using Google Translate\n",
-    "    n1o = translator.translate(prov_th_1, dest='en').text \n",
-    "    \n",
+    "    trans = await translator.translate(prov_th_1, dest='en')\n",
+    "    n1o = trans.text\n",
+    "\n",
     "    # normalize translated name by converting to lower() case and \n",
     "    #   strip() invisible characters\n",
     "    prov_en_1 = n1o.lower().strip() \n",
@@ -9037,7 +9037,8 @@
     "                \"mean\": [mean],\n",
     "                \"maxval\": [maxval]\n",
     "            }\n",
-    "            fuzzy_df1 = fuzzy_df1.append(pd.DataFrame(row_data))\n",
+    "            #fuzzy_df1 = fuzzy_df1.append(pd.DataFrame(row_data))\n",
+    "            fuzzy_df1 = pd.concat([fuzzy_df1, pd.DataFrame(row_data)], ignore_index=True)\n",
     "\n",
     "            print(\"Loop completed.\")\n",
     "# end time            \n",
@@ -23660,7 +23661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30942,7 +30943,8 @@
     }
    ],
    "source": [
-    "fuzzy_df1.loc[fuzzy_df1['maxval'].equals(fuzzy_df1['mean'])]"
+    "#fuzzy_df1.loc[fuzzy_df1['maxval'].equals(fuzzy_df1['mean'])]\n",
+    "fuzzy_df1.loc[fuzzy_df1['maxval'] == fuzzy_df1['mean']]"
    ]
   },
   {
