--- a/NB04-2016-HIV-MTCT-Elimination-Visualize-Data.ipynb
+++ b/NB04-2016-HIV-MTCT-Elimination-Visualize-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:06.214180Z",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:06.894342Z",
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:09.088674Z",
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:10.308766Z",
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:10.991374Z",
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:12.350794Z",
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:19.011408Z",
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:20.867952Z",
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:40.501108Z",
@@ -1862,6 +1862,7 @@
     }
    ],
    "source": [
+    "import fiona.path\n",
     "import geopandas as gpd\n",
     "\n",
     "gpd.__version__"
@@ -1876,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:43.745945Z",
@@ -2874,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:48.520277Z",
@@ -2888,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T14:39:52.393292Z",
@@ -2920,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2950,7 +2951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T11:44:48.831122Z",
@@ -3025,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T11:50:27.226043Z",
@@ -3039,14 +3040,14 @@
     "import json\n",
     "import numpy as np\n",
     "\n",
-    "from branca.utilities import _locations_mirror\n",
-    "from folium.features import *\n",
-    "from folium.features import _locations_tolist"
+    "#from branca.utilities import _locations_mirror\n",
+    "#from folium.features import *\n",
+    "#from folium.features import _locations_tolist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3055,7 +3056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3084,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3104,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T11:37:42.781855Z",
@@ -3231,7 +3232,8 @@
     }
    ],
    "source": [
-    "mtct3_series_df.head()"
+    "#mtct3_series_df.head()\n",
+    "mtct_series_df3.head()"
    ]
   },
   {
@@ -3250,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3272,7 +3274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3287,32 +3289,41 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "import pysal as ps\n",
-    "from branca.utilities import split_six\n",
+    "\n",
+    "def split_six(series):\n",
+    "    \"\"\"\n",
+    "    Return bin edges for 6 equal-width intervals (suitable for folium.Choropleth).\n",
+    "    \"\"\"\n",
+    "    _, bin_edges = pd.cut(series, bins=6, retbins=True)\n",
+    "    return bin_edges.tolist()\n",
     "\n",
     "def get_threshold_scale(classifier, num_classes, gdf_series):\n",
-    "    classifier = 'Fisher_Jenks'\n",
-    "    if num_classes > 6:\n",
-    "        num_classes = 6\n",
-    "    gdf_series = gdf_series\n",
+    "    # Ensure the classifier is valid and set to 'Fisher_Jenks' if it isn't provided\n",
     "    if classifier == 'Fisher_Jenks':\n",
-    "        threshold_scale=ps.esda.mapclassify.Fisher_Jenks(gdf_series, num_classes).bins.tolist()\n",
-    "    if classifier == 'Equal_Interval':\n",
-    "        threshold_scale=ps.esda.mapclassify.Equal_Interval(gdf_series, num_classes).bins.tolist()\n",
-    "    if classifier == 'Quantiles':\n",
-    "        threshold_scale=ps.esda.mapclassify.Quantiles(gdf_series, num_classes).bins.tolist()\n",
-    "    if classifier == 'SplitSix':\n",
-    "        threshold_scale=split_six(gdf_series)\n",
+    "        if num_classes > 6:\n",
+    "            num_classes = 6\n",
+    "        threshold_scale = ps.esda.mapclassify.Fisher_Jenks(gdf_series, num_classes).bins.tolist()\n",
+    "    \n",
+    "    elif classifier == 'Equal_Interval':\n",
+    "        threshold_scale = ps.esda.mapclassify.Equal_Interval(gdf_series, num_classes).bins.tolist()\n",
+    "    \n",
+    "    elif classifier == 'Quantiles':\n",
+    "        threshold_scale = ps.esda.mapclassify.Quantiles(gdf_series, num_classes).bins.tolist()\n",
+    "    \n",
+    "    elif classifier == 'SplitSix':\n",
+    "        threshold_scale = split_six(gdf_series)  # Use the custom split_six function\n",
     "\n",
     "    return threshold_scale\n",
-    "    \n",
-    "threshold_scale = split_six(mtct3_series_df['TRpct'])\n",
-    "threshold_scale = get_threshold_scale('SplitSix', 6, mtct3_series_df['TRpct'])"
+    "\n",
+    "threshold_scale = split_six(mtct_series_df3['TRpct'])\n",
+    "threshold_scale = get_threshold_scale('SplitSix', 6, mtct_series_df3['TRpct'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3321,7 +3332,7 @@
     "m2013 = folium.Map(width=500,height=500, location=[13, 101], zoom_start=5, tiles=\"cartodbpositron\")\n",
     "m2013.choropleth(\n",
     "    geo_data=geo_data1,\n",
-    "    data=mtct3_series_df[mtct3_series_df['year']==2013],\n",
+    "    data=mtct_series_df3[mtct_series_df3['year']==2013],\n",
     "    columns=['ISO_CODE', 'TRpct'],\n",
     "    key_on='feature.properties.ISO_CODE',\n",
     "    legend_name='Transmission Rate (%)',\n",
@@ -3335,7 +3346,7 @@
     "m2014 = folium.Map(width=500,height=500, location=[13, 101], zoom_start=5, tiles=\"cartodbpositron\")\n",
     "m2014.choropleth(\n",
     "    geo_data=geo_data1,\n",
-    "    data=mtct3_series_df[mtct3_series_df['year']==2014],\n",
+    "    data=mtct_series_df3[mtct_series_df3['year']==2014],\n",
     "    columns=['ISO_CODE', 'TRpct'],\n",
     "    key_on='feature.properties.ISO_CODE',\n",
     "    legend_name='Transmission Rate (%)',\n",
@@ -3349,7 +3360,7 @@
     "m2015 = folium.Map(width=500,height=500, location=[13, 101], zoom_start=5, tiles=\"cartodbpositron\")\n",
     "m2015.choropleth(\n",
     "    geo_data=geo_data1,\n",
-    "    data=mtct3_series_df[mtct3_series_df['year']==2015],\n",
+    "    data=mtct_series_df3[mtct_series_df3['year']==2015],\n",
     "    columns=['ISO_CODE', 'TRpct'],\n",
     "    key_on='feature.properties.ISO_CODE',\n",
     "    legend_name='Transmission Rate (%)',\n",
@@ -3363,7 +3374,7 @@
     "m2016 = folium.Map(width=500,height=500, location=[13, 101], zoom_start=5, tiles=\"cartodbpositron\")\n",
     "m2016.choropleth(\n",
     "    geo_data=geo_data1,\n",
-    "    data=mtct3_series_df[mtct3_series_df['year']==2016],\n",
+    "    data=mtct_series_df3[mtct_series_df3['year']==2016],\n",
     "    columns=['ISO_CODE', 'TRpct'],\n",
     "    key_on='feature.properties.ISO_CODE',\n",
     "    legend_name='Transmission Rate (%)',\n",
@@ -3376,6 +3387,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3384,7 +3402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-24T11:37:44.789358Z",
@@ -3419,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3449,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
