--- a/NB02-2016-HIV-MTCT-Elimination-Prepare-Data.ipynb
+++ b/NB02-2016-HIV-MTCT-Elimination-Prepare-Data.ipynb
@@ -505,13 +505,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_rows', None)  \n",
     "pd.set_option('display.max_columns', None)  \n",
-    "pd.set_option('max_colwidth', -1)  \n",
+    "pd.set_option('max_colwidth', None)  \n",
     "pd.set_option('display.width', 1000)"
    ]
   },
